# hermes-autonomous-agent-system

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INSTALL_KO.md  PLATFORM_SETUP.md  THREAD_CMUX_WORKSPACE.md
examples/: basic-issue-loop.md  cmux-10-surface-workspace.md  cmux-20-surface-workspace.md  hermes-gateway-event.dry-run.json  hermes-godmode-status-smoke.discord-event.json  hermes-godmode-unauthorized-smoke.discord-event.json  hermes-router.json
harnesses/: issue-loop.md
policies/: cmux-first.md  evidence-and-no-fabrication.md  issue-first.md
scripts/: hermes-gateway-wrapper  validate-harnesses
src/hasystem/: command_runner.py  compaction_rollover.py  compaction_thread_names.py  discord_request.py  finalize.py  gateway.py  gateway_parsing.py  github_client.py  github_rest.py  godmode.py  hermes_context.py  installer_ko.py  intake.py  loop_runner.py  models.py  repo_spec.py  runtime_hook.py  state_store.py  worker.py  workspace.py
src/hermes_autonomous_agent_system.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
templates/: follow-up-issue.md  verification-report.md  worker-prompt.md
tests/: test_compaction_rollover.py  test_console_scripts.py  test_context_compression_runtime_hook.py  test_discord_request.py  test_finalize.py  test_gateway_wrapper_live_fixture.py  test_github_client.py  test_godmode.py  test_hasystem_gateway_intake_plugin.py  test_hermes_context_compression.py  test_intake_and_labels.py  test_markdown_harnesses.py  test_repo_spec.py  test_run_loop_and_worker.py  test_state_store.py  test_workspace.py
(+13 files in other folders)
