[project]
name = "hermes-autonomous-agent-system"
version = "0.1.0"
description = "Hermes-controlled autonomous GitHub/Discord agent system MVP"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hermes-discord-request = "hasystem.commands.discord_request:main"
hermes-context-compression-hook = "hasystem.commands.context_compression_hook:main"
hermes-gateway-adapter = "hasystem.commands.gateway_adapter:main"
hermes-intake = "hasystem.commands.intake:main"
hermes-run-loop = "hasystem.commands.run_loop:main"
hermes-run-once = "hasystem.commands.run_once:main"
hermes-finalize = "hasystem.commands.finalize:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
